log
Fri Mar 11 17:31:31 HSP 2022: 
 tests:  0|7
total_score: 0/70
091d26d
Fri Mar 11 19:48:04 HSP 2022: 
 tests:  0|7
total_score: 0/70
e107357
Fri Mar 11 21:53:19 HSP 2022: 
 tests:  0|7
total_score: 0/70
2d3d692
Fri Mar 11 22:12:56 HSP 2022: 
 tests:  0|7
total_score: 0/70
eb9242b
Fri Mar 11 22:18:28 HSP 2022: 
 tests:  0|7
total_score: 0/70
ba963ab
Fri Mar 11 22:20:36 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
0252475
Fri Mar 11 22:22:18 HSP 2022: 
 tests:  1|6
total_score: 10/70
fc93963
Fri Mar 11 22:28:50 HSP 2022: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
f03d703
Fri Mar 11 22:30:02 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
62ae2fa
Fri Mar 11 22:49:34 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'asignarValor':
exercises.c:87:8: error: incompatible types when assigning to type 'Vector {aka struct <anonymous>}' from type 'int'
    v[i]=valor;
        ^
Compilation failed
e2fab0a
Fri Mar 11 22:53:04 HSP 2022: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'obtenerValor':
exercises.c:98:9: error: incompatible types when assigning to type 'int' from type 'Vector {aka struct <anonymous>}'
    valor=v[i];
         ^
Compilation failed
119f607
Fri Mar 11 22:59:19 HSP 2022: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaV':
exercises.c:107:16: error: invalid operands to binary + (have 'Vector {aka struct <anonymous>}' and 'Vector {aka struct <anonymous>}')
       c[i]=a[i]+b[i]
            ~~~~^~~~~
exercises.c:108:4: error: expected ';' before '}' token
    }
    ^
exercises.c: In function 'obtenerValor':
exercises.c:98:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
5186b71
Fri Mar 11 23:09:59 HSP 2022: 
 exercises.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'obtenerValor':
exercises.c:98:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
9c9eab4
Fri Mar 11 23:10:42 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'obtenerValor':
exercises.c:97:11: error: return makes integer from pointer without a cast [-Werror=int-conversion]
    return NULL;
           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
bfd2009
Fri Mar 11 23:13:12 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'obtenerValor':
exercises.c:97:4: error: 'return' with no value, in function returning non-void [-Werror]
    return;
    ^~~~~~
exercises.c:96:5: note: declared here
 int obtenerValor(Vector * v, int i) {
     ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
f18b4c6
Fri Mar 11 23:19:41 HSP 2022: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:81:11: error: incompatible types when returning type 'Vector {aka struct <anonymous>}' but 'Vector * {aka struct <anonymous> *}' was expected
    return a;
           ^
exercises.c:82:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d9aae9e
Fri Mar 11 23:21:57 HSP 2022: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:80:11: error: invalid type argument of unary '*' (have 'Vector {aka struct <anonymous>}')
    return *a;
           ^~
exercises.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
859f56b
Fri Mar 11 23:22:36 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:80:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return a.datos;
           ~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5bcfdcf
Fri Mar 11 23:22:49 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:80:11: error: return makes pointer from integer without a cast [-Werror=int-conversion]
    return *a.datos;
           ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2ee10f6
Fri Mar 11 23:29:31 HSP 2022: 
 exercises.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:62:22: error: 'Juan' is a pointer; did you mean to use '->'?
    memcpy(nombre,Juan.nombre,30);
                      ^
                      ->
exercises.c:63:19: error: 'Juan' is a pointer; did you mean to use '->'?
    memcpy(rut,Juan.rut,30);
                   ^
                   ->
exercises.c:64:8: error: 'Juan' is a pointer; did you mean to use '->'?
    Juan.edad=edad;
        ^
        ->
test.c: In function 'crearVector':
test.c:244:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
 }
 ^
test.c:266:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:244:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
db7dd97
Fri Mar 11 23:31:52 HSP 2022: 
 exercises.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'obtenerValor':
exercises.c:99:12: error: incompatible types when returning type 'Vector {aka struct <anonymous>}' but 'int' was expected
    return v[i];
           ~^~~
test.c: In function 'crearVector':
test.c:244:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
 }
 ^
test.c:266:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
In file included from test.c:5:0:
exercises.c: In function 'obtenerValor':
exercises.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:244:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9a61e8c
